# wps_cleanup

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: .gitkeep
scripts/: build_local.bat  generate_icon.py  setup.iss
tests/: conftest.py  test_cleaner.py  test_config.py  test_report.py  test_scanner.py  test_utils.py
wps_cleanup/: __init__.py  app.py  cleaner.py  cli.py  config.py  report.py  report_dialog.py  scanner.py  utils.py
